Started theoretical session.

--- a/PDH_lock/PDH.ipynb
+++ b/PDH_lock/PDH.ipynb
@@ -49,9 +49,41 @@
     "\n",
     "What kind of load are we driving?\n",
     "- We will drive a Piezo connected to a mirror (which is essentially a capacitive load, w/ $C_{DC} \\approx 1~\\mu F$\n",
-    "- We will need a fairly large voltage gain here, since teh piezo will require about 100 V to move a full stroke. \n",
+    "- We will need a fairly large voltage gain here, since the piezo will require about 100 V to move a full stroke. \n",
     "- Our mechanical bandwidth is about 10 kHz, so we don't need anything faster than that."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tutorial of relevant Physics\n",
+    "\n",
+    "### TLDR\n",
+    "PDH stabilizes a cavity by creating sidebands on a laser and observing the phase of these sidebands upon reflection from the cavity with respect to the modulation. Since a cavity induces a frequency dependant phase shift on the reflected beam, this phase shift gives a DC signal directly proportional to the deviation from cavity resonance, which can be used in a servo loop.\n",
+    "\n",
+    "### Introduction\n",
+    "The essential idea of the Pound Drever Hall (PDH) technique is that we want to stabilize the <b>releative</b> frequncy of a laser and an optical cavity. In one set of circumstances (LIGO for example) an ultrastable cavity is used to stabilize the frequency of a laser. In other circumstances (such as our applications in atomic physics) a separately stabilized laser is used to stabilize the resonant frequency of a cavity by modulating its length. In general, neither the laser or the cavity need be intrinsically stable, but the PDH technique will ensure realtive stability, so that their deviations will track one anothers and the laser will always be resonant to the cavity. \n",
+    "\n",
+    "### Fabry Perot Cavities\n",
+    " TODO\n",
+    " \n",
+    "### The Phase and Amplitude of the Reflected Signal\n",
+    "From the above calculation, the reflected E-field is the sum of two terms: the directly reflected incident field and the portion of the intracavity field which leaks through the first mirror:\n",
+    "\n",
+    "$$\n",
+    "\\frac{E_{in}}{E_r}\\equiv\\mathcal{R} = \\frac{-r}{1+r^2e^{i\\Delta}} + \\frac{re^{i\\Delta}}{1+r^2e^{i\\Delta}}\n",
+    "$$\n",
+    "\n",
+    "... where $\\Delta \\equiv \\omega/\\omega_{fsr}$ is the frequency as a multiple of free spectral lengths."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
