Added to theory section.

--- a/PDH_lock/PDH.ipynb
+++ b/PDH_lock/PDH.ipynb
@@ -71,7 +71,22 @@
    "metadata": {},
    "source": [
     "### Fabry Perot Cavities\n",
-    "A Fabry Perot Cavity, in its simplest form is a pair of parallel mirrors or reflectivity $R$ separated by a distance $L$. "
+    "A Fabry Perot Cavity, in its simplest form is a pair of parallel mirrors or reflectivity $R$ separated by a distance $L$. \n",
+    "\n",
+    "At the interface, a beam of light $E_{in}$ is partially reflected $E_r = rE_{in}$ and partially transmitted (E_t = tE_{in}). We consider a pair of mirrors in which the interior has index of refraction $n$ and is surrounded by air $n\\approx1$. Since the first reflection is external reflection (i.e. going from a low to high index) it is accompanied by a $\\pi$ phase shift and thus is negative ($e^{i\\pi} = -1$). The second mirror is internal reflection and thus has no phase shift. \n",
+    "\n",
+    "In the lab, we measure the time averaged intesity $I = \\langle \\varepsilon_0 c\\vert E\\vert^2\\rangle \\propto \\vert E\\vert^2$ so we define the portion of reflected and transmitted power as:\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\mathcal{R} &\\equiv \\frac{E_r}{E_{in}} \\\\\n",
+    "\\mathcal{T} &\\equiv \\frac{E_t}{E_{in}}\n",
+    "\\end{align}\n",
+    "\n",
+    "Since there are multiple internal reflections inside the cavity, the transmission is not simply $\\vert t^2 \\vert^2 = t^4$ as you might expect but is a rapidly changing function of the cavity length with respect to the light's wavelength. Very much counter intuitively, it can reach 100% transmission in the steady state, even with 99.999% refelctivity mirrors!\n",
+    "\n",
+    "The key to understanding the behaviour of the Fabry Perot cavity's transmission behaviour is that, initially, nearly all the light is reflected and a very small amount leaks into the cavity. After some time, light has been continuously building up inside the cavity and a small portion leaks out the front and rear faces due to the small transmission through the mirrors. For certain geometries, specifically, if  the cavity length $L$ is an integer number of half-wavelengths of the incident light, the light bouncing back and forth inside the cavity constructively interferes and is greatly enhanced. In this case, the cavity is said to be <em>resonant</em>. When the condition for resonance is met, the light leaking out the back face is equal in magnitude and opposite in phase with the incident light that is bouncing off the first mirror and the reflected field thus vanishes. The light leaking through the opposite side is likewise equal in magnitude to the incident light, so we have the appearance of 100% transmission. \n",
+    "\n",
+    "To calculate $\\mathcal{F}$ and $\\mathcal{T}$ analytically, we can formally sum the fields in the above figure. Each time the light propagates though the cavity, it picks up a phase factor $e^{ink_0L} = e^{ikL}$ where $kL = 2\\pi \\times nL\\lambda$ can be seen as the number of optical cycles corresponding to the transit between the mirrors. The transmitted light from the intial beam that goes right through the cavity is then $\\left(t \\times e^{ikL} \\times t\\right)E_{in} = t^2e^{i\\phi}E_{in}$ (where we've written $\\phi = ikL$). "
    ]
   },
   {
@@ -139,10 +154,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
