--- a/PDH_lock/PDH.ipynb
+++ b/PDH_lock/PDH.ipynb
@@ -73,9 +73,9 @@
     "### Fabry Perot Cavities\n",
     "A Fabry Perot Cavity, in its simplest form is a pair of parallel mirrors or reflectivity $R$ separated by a distance $L$. \n",
     "\n",
-    "At the interface, a beam of light $E_{in}$ is partially reflected $E_r = rE_{in}$ and partially transmitted (E_t = tE_{in}). We consider a pair of mirrors in which the interior has index of refraction $n$ and is surrounded by air $n\\approx1$. Since the first reflection is external reflection (i.e. going from a low to high index) it is accompanied by a $\\pi$ phase shift and thus is negative ($e^{i\\pi} = -1$). The second mirror is internal reflection and thus has no phase shift. \n",
+    "At the interface, a beam of light $E_{in}$ is partially reflected $E_r = rE_{in}$ and partially transmitted ($E_t = tE_{in}$). We consider a pair of mirrors in which the interior has index of refraction $n$ and is surrounded by air $n\\approx1$. Since the first reflection is external reflection (i.e. going from a low to high index) it is accompanied by a $\\pi$ phase shift and thus is negative ($e^{i\\pi} = -1$). The second mirror is internal reflection and thus has no phase shift. \n",
     "\n",
-    "In the lab, we measure the time averaged intesity $I = \\langle \\varepsilon_0 c\\vert E\\vert^2\\rangle \\propto \\vert E\\vert^2$ so we define the portion of reflected and transmitted power as:\n",
+    "Either way, we define the relations between the reflected and transmitted fields to the incident field as follows:\n",
     "\n",
     "\\begin{align}\n",
     "\\mathcal{R} &\\equiv \\frac{E_r}{E_{in}} \\\\\n",
@@ -86,7 +86,38 @@
     "\n",
     "The key to understanding the behaviour of the Fabry Perot cavity's transmission behaviour is that, initially, nearly all the light is reflected and a very small amount leaks into the cavity. After some time, light has been continuously building up inside the cavity and a small portion leaks out the front and rear faces due to the small transmission through the mirrors. For certain geometries, specifically, if  the cavity length $L$ is an integer number of half-wavelengths of the incident light, the light bouncing back and forth inside the cavity constructively interferes and is greatly enhanced. In this case, the cavity is said to be <em>resonant</em>. When the condition for resonance is met, the light leaking out the back face is equal in magnitude and opposite in phase with the incident light that is bouncing off the first mirror and the reflected field thus vanishes. The light leaking through the opposite side is likewise equal in magnitude to the incident light, so we have the appearance of 100% transmission. \n",
     "\n",
-    "To calculate $\\mathcal{F}$ and $\\mathcal{T}$ analytically, we can formally sum the fields in the above figure. Each time the light propagates though the cavity, it picks up a phase factor $e^{ink_0L} = e^{ikL}$ where $kL = 2\\pi \\times nL\\lambda$ can be seen as the number of optical cycles corresponding to the transit between the mirrors. The transmitted light from the intial beam that goes right through the cavity is then $\\left(t \\times e^{ikL} \\times t\\right)E_{in} = t^2e^{i\\phi}E_{in}$ (where we've written $\\phi = ikL$). "
+    "To calculate $\\mathcal{F}$ and $\\mathcal{T}$ analytically, we can formally sum the fields in the above figure. Each time the light propagates though the cavity, it picks up a phase factor $e^{ink_0L} = e^{ikL}$ where $kL = 2\\pi \\times nL\\lambda$ can be seen as the number of optical cycles corresponding to the transit between the mirrors. The transmitted light from the intial beam that goes right through the cavity is then $\\left(t \\times e^{ikL} \\times t\\right)E_{in} = t^2e^{i\\phi}E_{in}$ (where we've written $\\phi = ikL$).\n",
+    "\n",
+    "We must however the light that subsequentially traverse the cavity back and forth, then leaks out (picking up a factor $r^2 e^{2i\\phi}$) and add this to the output. Then there is the light which bounces back and forth twice before escaping $\\left(r^2e^{2i\\phi}\\right)^2$ and the light which does so thrice $\\left(r^2e^{2i\\phi}\\right)^3$ and so forth.\n",
+    "\n",
+    "The result is an infinite sum:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{T} = t^2e^{i\\phi}\\sum_{k=0}^\\infty\\left(r^2e^{2i\\phi}\\right)^k\n",
+    "$$\n",
+    "\n",
+    "Fortunately this is just a geometric series $\\sum_{k=0}^\\infty x^k$ which converges to $1/(1-x)$ as long as $\\vert x\\vert < 1$. Since this is the case here we arrive at:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{T}(L) = \\frac{t^2e^{ikL}}{1-r^2e^{2ikL}}\n",
+    "$$\n",
+    "\n",
+    "First note that we can write can write this in terms of frequency $\\omega = ck$ so we can eith think of a monochromatic beam of frequency $\\omega$ and a variable length cavity, or a fixed cavity of length $L$ with a scanning incident frequency.\n",
+    "\n",
+    "Next note that we can use the relation (subtlely valid here) that $t^2 + r^2 = 1$. As a side-note, when light is at normal incidence from a medium of index $n_i$ to a medium with index $n_t$ the real relation is $r^2 + \\frac{n_t}{n_i}t^2 = 1$, but here the light enters air to glass for the first $t$ and goes from glass to air for the second $t$, so the prefactors cancel out. There. My concious is cleared.\n",
+    "\n",
+    "In the lab, we measure the time averaged intesity $I = \\langle \\varepsilon_0 c\\vert E\\vert^2\\rangle$ so the relevant observable in terms of optical power is $\\vert\\mathcal{T}\\vert^2$:\n",
+    "\n",
+    "$$\n",
+    "I_t = \\vert\\mathcal{T}\\vert^2 = \\frac{(1-R)^2}{(1-Re^{2ikL})(1-Re^{-2ikL})} = \\frac{(1-R)^2}{(1+R^2 - 2R\\cos(2kL)}\n",
+    "$$\n",
+    "\n",
+    "Using the trigonometric identity $\\cos2\\theta = 1 - \\sin^2\\theta$. we can write this as:\n",
+    "\n",
+    "$$\n",
+    "I_t = \\frac{(1-R)^2}{(1 - R)^2 - 4R\\sin^(kL)} = \\frac{1}{1 + \\frac{4R}{1-R^2}\\sin^2kL}\n",
+    "$$\n",
+    "\n"
    ]
   },
   {
